--- a/trunk/plugins/win32/hspinet/hspinet.vcproj
+++ b/trunk/plugins/win32/hspinet/hspinet.vcproj
@@ -115,6 +115,9 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
+				RelativePath=".\czbase64.cpp">
+			</File>
+			<File
 				RelativePath=".\czcrypt.cpp">
 			</File>
 			<File
@@ -131,6 +134,9 @@
 			Name="ヘッダー ファイル"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			<File
+				RelativePath=".\czbase64.h">
+			</File>
 			<File
 				RelativePath=".\czcrypt.h">
 			</File>
