--- a/trunk/plugins/win32/hspinet/hspinet_vc2008.vcproj
+++ b/trunk/plugins/win32/hspinet/hspinet_vc2008.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;HSPINET_EXPORTS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;HSPINET_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -64,6 +64,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/hspinet.dll"
 				LinkIncremental="2"
+				ModuleDefinitionFile="$(InputDir)nkf\dll.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/hspinet.pdb"
 				SubSystem="2"
@@ -119,7 +120,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;HSPINET_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;HSPINET_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -139,6 +140,7 @@
 				Name="VCLinkerTool"
 				OutputFile="$(OutDir)/hspinet.dll"
 				LinkIncremental="1"
+				ModuleDefinitionFile="$(InputDir)nkf\dll.def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -180,6 +182,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\cJSON.c"
+				>
+			</File>
+			<File
 				RelativePath=".\czbase64.cpp"
 				>
 			</File>
@@ -199,12 +205,28 @@
 				RelativePath=".\md5.c"
 				>
 			</File>
+			<Filter
+				Name="nkf"
+				>
+				<File
+					RelativePath=".\nkf\nkf.c"
+					>
+				</File>
+				<File
+					RelativePath=".\nkf\utf8tbl.c"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="ヘッダー ファイル"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\cJSON.h"
+				>
+			</File>
 			<File
 				RelativePath=".\czbase64.h"
 				>
@@ -221,6 +243,30 @@
 				RelativePath=".\md5.h"
 				>
 			</File>
+			<Filter
+				Name="nkf"
+				>
+				<File
+					RelativePath=".\nkf\addlabel.h"
+					>
+				</File>
+				<File
+					RelativePath=".\nkf\config.h"
+					>
+				</File>
+				<File
+					RelativePath=".\nkf\nkf.h"
+					>
+				</File>
+				<File
+					RelativePath=".\nkf\nkf32.h"
+					>
+				</File>
+				<File
+					RelativePath=".\nkf\utf8tbl.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="リソース ファイル"
