--- a/hsp3ll/hsp3ll_vc2008.vcproj
+++ b/hsp3ll/hsp3ll_vc2008.vcproj
@@ -119,6 +119,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="lib\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;HSPWIN;HSPWINGUI;__STDC_LIMIT_MACROS;__STDC_CONSTANT_MACROS;_CRT_SECURE_NO_DEPRECATE;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;CRT_NONSTDC_NO_WARNINGS;_SCL_SECURE_NO_DEPRECATE;USE_WINDOWS_API"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -139,6 +140,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib LLVMJIT.lib LLVMInterpreter.lib LLVMX86CodeGen.lib LLVMExecutionEngine.lib LLVMSelectionDAG.lib LLVMX86Info.lib LLVMAsmPrinter.lib LLVMAsmParser.lib LLVMCodeGen.lib LLVMScalarOpts.lib LLVMInstCombine.lib LLVMTransformUtils.lib LLVMipa.lib LLVMAnalysis.lib LLVMTarget.lib LLVMCore.lib LLVMMC.lib LLVMSupport.lib LLVMSystem.lib LLVMipo.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="lib\lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="1"
@@ -489,11 +491,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\hsp3\supio.h"
+				RelativePath=".\Supio.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Supio.h"
+				RelativePath="..\hsp3\supio.h"
 				>
 			</File>
 			<File
