--- a/trunk/hspcmp/win32dll/hspcmp_vc2008.vcproj
+++ b/trunk/hspcmp/win32dll/hspcmp_vc2008.vcproj
@@ -190,6 +190,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dpm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\errormsg.cpp"
 				>
 			</File>
@@ -249,6 +253,10 @@
 			</File>
 			<File
 				RelativePath="..\comutil.h"
+				>
+			</File>
+			<File
+				RelativePath=".\dpm.h"
 				>
 			</File>
 			<File
