--- a/trunk/tools/win32/hsed3_footy2/hsed_vc2005.vcproj
+++ b/trunk/tools/win32/hsed3_footy2/hsed_vc2005.vcproj
@@ -124,7 +124,7 @@
 				Optimization="3"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="true"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
