--- a/trunk/tools/win32/hsed3/Poppad.rc
+++ b/trunk/tools/win32/hsed3/Poppad.rc
@@ -182,8 +182,8 @@ FONT 9, "‚l‚r ‚oƒSƒVƒbƒN", 0, 0, 0x0
 BEGIN
     CTEXT           "HSP script editor",IDC_STATIC,41,12,67,8
     ICON            "OniPad",IDC_STATIC,8,8,20,20
-    CTEXT           "For Windows9x/2K/XP/Vista version 3.2",IDC_STATIC,0,29,159,8
-    CTEXT           "Copyright 1997-2009 onion software",IDC_STATIC,0,37,159,8
+    CTEXT           "For Windows9x/2K/XP/Vista/7 version 3.3",IDC_STATIC,0,29,159,8
+    CTEXT           "Copyright 1997-2011 onion software",IDC_STATIC,0,37,159,8
     DEFPUSHBUTTON   "OK",IDOK,64,75,32,14,WS_GROUP
     CTEXT           "http://hsp.tv/",IDC_STATIC,0,59,159,8
     LTEXT           "Information available at:",IDC_STATIC,46,51,71,8
