[HSP3Dish] button命令のサポートを追加

--- a/hsp3dish/win32/hsp3dish.vcproj
+++ b/hsp3dish/win32/hsp3dish.vcproj
@@ -353,6 +353,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\hspwnd_obj.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\random.cpp"
 					>
 				</File>
