--- a/trunk/hsp3rd/hsp3/win32/hsp3rd.vcproj
+++ b/trunk/hsp3rd/hsp3/win32/hsp3rd.vcproj
@@ -345,6 +345,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\hspwnd_obj.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\random.cpp"
 					>
 				</File>
