hsptvディレクトリを示すシステムマクロ、dir_tvを追加(dirinfo命令も修正) #pack、#epack命令のファイルをhsptvディレクトリ内も検索するように修正 [hspda] sortval命令でソートが正しく動作しない場合がある不具合を修正(BT#244) [hspinet] ftpopen命令にPASSIVEモード接続のオプションを追加 [HSP3Dish][android,iOS] 画面サイズのスケーリングに対応 [HSP3Dish][android] HSP3DHによるリリースビルドに対応

--- a/hspcmp/win32dll/hspcmp.vcproj
+++ b/hspcmp/win32dll/hspcmp.vcproj
@@ -191,6 +191,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\dpm.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\dpm.h"
+				>
+			</File>
+			<File
 				RelativePath="..\errormsg.cpp"
 				>
 			</File>
