[HSP3Dish][JS] emsdk 1.22.0対応
Former-commit-id: 5b4306604f11455e5d511b3ed24eef12b62d0948

--- a/hsp3dish/makefile.emscripten
+++ b/hsp3dish/makefile.emscripten
@@ -1,7 +1,9 @@
 CC = em++
 #CFLAGS = -Wall -DHSPDISH -DHSPEMSCRIPTEN -DHSPDEBUG -fpermissive -g4 --js-opts 0 -s SAFE_HEAP=1 -s USE_TYPED_ARRAYS=2 -s LEGACY_GL_EMULATION=1
 #CFLAGS = -Wall -DHSPDISH -DHSPEMSCRIPTEN -DHSPDEBUG -fpermissive -g4 -s USE_TYPED_ARRAYS=2 -s LEGACY_GL_EMULATION=1
-CFLAGS = -Wall -DHSPDISH -DHSPEMSCRIPTEN -DHSPDEBUG -fpermissive -s USE_TYPED_ARRAYS=2 -s LEGACY_GL_EMULATION=1 -O2 -s DISABLE_EXCEPTION_CATCHING=0
+CFLAGS = -Wall -DHSPDISH -DHSPEMSCRIPTEN -DHSPDEBUG \
+	   -fpermissive -O2 \
+	   -s USE_TYPED_ARRAYS=2 -s LEGACY_GL_EMULATION=1 -s DISABLE_EXCEPTION_CATCHING=0 --memory-init-file 0
 # -O2 -s DISABLE_EXCEPTION_CATCHING=0
 
 OBJS = ../hsp3/dpmread.bc \
