--- a/hsp3dish/makefile.emscripten
+++ b/hsp3dish/makefile.emscripten
@@ -15,7 +15,7 @@ OBJS = ../hsp3/dpmread.bc \
 	hgobj.bc \
 	../hsp3/hsp3.bc \
 	../hsp3/hsp3code.bc \
-	../hsp3/hsp3debug.bc \
+	../hsp3/hsp3debug_utf8.bc \
 	hsp3gr_dish.bc \
 	../hsp3/hsp3int.bc \
 	../hsp3/hspvar_core.bc \
@@ -59,3 +59,6 @@ clean:
 release:
 	make clean
 	make "CFLAGS = -O3 -Wall --input-charset=cp932 --exec-charset=cp932 -DHSPEMSCRIPTEN"
+
+../hsp3/hsp3debug_utf8.cpp: ../hsp3/hsp3debug.cpp
+	iconv -f cp932 -t utf-8 $< > $@
