--- a/hspcmp/makefile.emscripten
+++ b/hspcmp/makefile.emscripten
@@ -2,9 +2,13 @@ CC = em++
 # CFLAGS = -Wall --input-charset=cp932 --exec-charset=cp932 -DHSPLINUX -DHSPDEBUG
 #CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive -s USE_TYPED_ARRAYS=2 -O2 -s NO_EXIT_RUNTIME=1
 #CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive -s USE_TYPED_ARRAYS=2 -g4 --js-opts 0 -s NO_EXIT_RUNTIME=1 -std=gnu++11
-CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive -s USE_TYPED_ARRAYS=2 -s NO_EXIT_RUNTIME=1 -s DISABLE_EXCEPTION_CATCHING=0 -O2
+CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive \
+	   -s USE_TYPED_ARRAYS=2 -s NO_EXIT_RUNTIME=1 \
+	   -s DISABLE_EXCEPTION_CATCHING=0 -O2 \
+	   --memory-init-file 0
 #CFLAGS = -Wall -DHSPEMSCRIPTEN -fpermissive -s USE_TYPED_ARRAYS=2 -g4 --js-opts 0 -s SAFE_HEAP=1 -s NO_EXIT_RUNTIME=1 -std=gnu++11
-OBJS = ahtmodel.bc ahtobj.bc codegen.bc comutil.bc errormsg.bc hsc3.bc \
+
+OBJS = ahtmodel.bc ahtobj.bc codegen_utf8.bc comutil.bc errormsg_utf8.bc hsc3.bc \
     hspcmd.bc label.bc localinfo.bc membuf.bc strnote.bc \
     tagstack.bc token.bc \
 	win32dll/dpm.bc \
@@ -21,6 +25,12 @@ $(TARGET): $(OBJS)
 	echo $(CC) $(CFLAGS) -c $< -o $*.bc
 	$(CC) $(CFLAGS) -c $< -o $*.bc
 
+codegen_utf8.cpp: codegen.cpp
+	iconv -f cp932 -t utf-8 $< > $@
+
+errormsg_utf8.cpp: errormsg.cpp
+	iconv -f cp932 -t utf-8 $< > $@
+
 block3cmp.js: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) -o $@ $(LIBS)
 
@@ -32,6 +42,8 @@ hspcmp.html: $(OBJS)
 	$(CC) $(CFLAGS) \
 	$(OBJS) -o $@ $(LIBS) \
 	--preload-file emscripten/assets@/
+	cat ../hsp3dish/emscripten/license.js hspcmp.js | gzip -9 > hspcmp.js.gz
+	cat hspcmp.data | gzip -9 > hspcmp.data.gz
 
 clean:
 	rm -f $(OBJS) $(TARGET)
