[HSP3Dish][Windows] httpload,httpinfo命令を追加
Former-commit-id: cb5a09309cfbc12a4d601d1ec21faedb0323d717

--- a/hsp3dish/win32/hsp3dish.vcproj
+++ b/hsp3dish/win32/hsp3dish.vcproj
@@ -416,6 +416,10 @@
 					RelativePath=".\supio_win.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\webtask_win.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="obaq"
@@ -570,6 +574,10 @@
 					RelativePath="..\sysreq.h"
 					>
 				</File>
+				<File
+					RelativePath="..\webtask.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="win"
@@ -604,6 +612,10 @@
 				</File>
 				<File
 					RelativePath=".\supio_win.h"
+					>
+				</File>
+				<File
+					RelativePath=".\webtask_win.h"
 					>
 				</File>
 			</Filter>
