--- a/hsp3dish/win32/hsp3dish.vcproj
+++ b/hsp3dish/win32/hsp3dish.vcproj
@@ -207,7 +207,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="lib/include/"
-				PreprocessorDefinitions="WIN32;HSPWIN;HSPDISH;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;HSPWIN;HSPDISH;HSP_COM_UNSUPPORTED;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
 				UsePrecompiledHeader="0"
