64bit(x64)版ランタイムのDLL呼び出しに対応
Former-commit-id: 728f918ba3b97709240e78a0b7eace132880ba31

--- a/hsp3/hsp3_64.vcxproj.filters
+++ b/hsp3/hsp3_64.vcxproj.filters
@@ -214,4 +214,9 @@
   <ItemGroup>
     <Xml Include="win32gui\XPStyle.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="call_extfunc64.asm">
+      <Filter>ソース ファイル</Filter>
+    </MASM>
+  </ItemGroup>
 </Project>
