[HSP3Dish][js]httpload,httpinfoを実装 [HSP3Dish][js]HSP_LIMIT_STEPを越えた場合にエラー表示
Former-commit-id: f20b659623735682f610d765d0aa2312eac09de3

--- a/hsp3dish/makefile.emscripten
+++ b/hsp3dish/makefile.emscripten
@@ -47,6 +47,7 @@ OBJS = \
 	emscripten/hsp3dish.bc \
 	emscripten/main.bc \
 	emscripten/mmman.bc \
+	emscripten/webtask_emscripten.bc \
 	emscripten/stb_image.bc \
 	emscripten/supio_emscripten.bc
 
@@ -194,6 +195,7 @@ OBJS_GP = \
 	emscripten/hsp3dish.gp.bc \
 	emscripten/main.gp.bc \
 	emscripten/mmman.gp.bc \
+	emscripten/webtask_emscripten.gp.bc \
 	emscripten/stb_image.gp.bc \
 	emscripten/supio_emscripten.gp.bc
 
